[EDIT] adopt updated folder structure

--- a/res/projects/pj01/pj01.md
+++ b/res/projects/pj01/pj01.md
@@ -11,8 +11,8 @@ This project is a study of various algorithms using various languages. Try to so
 
 <br>
 
-<img src="PJ1-1.png" style="zoom:100%;" />
-<img src="PJ1-2.png" style="zoom:44%;" />   <img src="PJ1-3.png" style="zoom:21%;" />
+<img src="./assets/pj01-1.png" style="zoom:100%;" />
+<img src="./assets/pj01-2.png" style="zoom:44%;" />   <img src="./assets/pj01-3.png" style="zoom:21%;" />
 
 <br>
 
