--- a/res/projects/pj08/pj08.md
+++ b/res/projects/pj08/pj08.md
@@ -3,7 +3,7 @@
 
 This project is the development of an APK crawler. The flow of APKcrawler is as below.
 
-![Alt text](PJ8-1.png)
+![Alt text](./assets/pj08-1.png)
 
 1. Crawler keeps asking Google Play to install a new APK on an Android device.
 2. Then Google Play sends a response to the device for installation.
