[ADD] finished date of ongoing projects

--- a/res/projects/pj01/pj01.md
+++ b/res/projects/pj01/pj01.md
@@ -5,7 +5,7 @@ This project is a study of various algorithms using various languages. Try to so
 
 **Objective** Solve various algorithm problems with various languages<br>
 **Keywords** Algorithms, Languages, BOJ (Baekjoon Online Judge), ICPC<br>
-**Duration** 2019.03-Ongoing<br>
+**Duration** 2019.03-2022.05 (3 years 3 months)<br>
 **Proportion** 100% (Sole)<br>
 **Skills** Kotlin, C++, Python, C, Shell
 
