--- a/res/projects/pj05/pj05.md
+++ b/res/projects/pj05/pj05.md
@@ -5,7 +5,7 @@ This project is a development of a discord bot for SAG (SSG Algorithm Group). At
 
 **Objective** Develop and maintain a discord bot for SAG (SSG Algorithm Group)<br>
 **Keywords** Discord.py v2.0, Parsing, Discord Cogs, async, Event Callback<br>
-**Duration** 2021.01-Ongoing<br>
+**Duration** 2021.01-2023.05 (2 years 5 months)<br>
 **Proportion** 100% (Sole)<br>
 **Skills** Python, GitHub (action, secret, submodule), Docker, json
 
