[ADD] prototype of 이력서

--- a/res/projects/pj12/pj12.md
+++ b/res/projects/pj12/pj12.md
@@ -5,8 +5,8 @@
 
 **Objective** Develop BMT applications for various customers<br>
 **Keywords** Android, Java, Payment, Application, Secure Processor<br>
-**Duration** <br>
-**Proportion** <br>
+**Duration** 2024.07-2025.3 (9 months)<br>
+**Proportion** 90% (Among 3 people)<br>
 **Skills** Android, Java
 
 <br>
