--- a/res/projects/pj15/pj15.md
+++ b/res/projects/pj15/pj15.md
@@ -5,7 +5,7 @@
 
 **Objective** <br>
 **Keywords** VAN, Public Key, Key Download, DUKPT, Future Key<br>
-**Duration** 2025.04-Ongoing<br>
+**Duration** 2025.04-2025.7 (4 months)<br>
 **Proportion** <br>
 **Skills** C, API, Linux
 
