[ADD] Updated version of Korean Resume (2025-07-12)

--- a/이력서.md
+++ b/이력서.md
@@ -1,10 +1,10 @@
-# 류민수 (Minsoo Ryu)
+# 류민수
 
 📧 onsoim@gmail.com<br>
 🔗 [LinkedIn](www.linkedin.com/in/onsoim)<br>
-🔗 [CV](https://github.com/onsoim/onsoim/blob/main/cv.md)
+🔗 [CV](https://github.com/onsoim/onsoim/blob/main/CV.md)
 
----
+<br>
 
 ## 👤 소개
 
@@ -12,113 +12,103 @@
 Android 앱, VAN 결제 단말, 퍼징 자동화 등 다양한 환경에서 실무 프로젝트를 수행했으며,
 논문, 특허, CVE 제보 등 실질적인 연구성과도 함께 보유하고 있습니다.
 
----
+<br>
 
-## 💼 경력
+## 💼 경력 : 5년 2개월
 
-### 블루버드(주)
+### 블루버드 (2년 2개월)
 
-**주임 연구원** 2024.03 – 재직 중
+**주임 연구원** 2024.03 – 재직 중 (1년 5개월)
 
-- KCP VAN 연동 시스템 개발 및 인증 (2025.04 – 2025.07)
+- KCP VAN 연동 시스템 개발 및 보안 인증 (2025.04 – 2025.07)
 - 현금IC 결제 이슈 5건 해결 (2025.03)
 - KSNet VAN 연동 시스템 개발 (2025.01 – 2025.02)
-- BMT용 Android 앱 개발 (2024.07 – 2025.03)
+- BMT용 Android 앱 7개 개발 (2024.07 – 2025.03)
 - 외주 개발 프로젝트 PM 역할 (2024.06 – 2024.11)
 
-**연구원** 2023.06 – 2024.02
+**연구원** 2023.06 – 2024.02 (9개월)
 
 - Mastercard Contactless 결제 커널 개발 및 인증 (2023.07 – 2024.04)
 
 ---
 
-### 고려대학교 해킹 기술 대응 연구실
+### 고려대학교 해킹 기술 대응 연구실 (2년)
 
-**연구원** 2020.09 – 2022.08
+**연구원** 2020.09 – 2022.08 (2년)
 
-- 자연어 기반 퍼징 시드 생성 연구
-- 무인이동체 보안 프로토콜 연구 및 특허 등록
-- 자동화 퍼징 환경 구성 및 테스트 프레임워크 설계
+- 차세대보안 분야 챌린지 R&D 총괄 과제 (2021.01-2020.12)
+  - 사이버 보안 챌린지 2021 대회 운영
+  - 논문 1건, 취약점 3건 제보
 
----
+- 무인이동체 공통핵심 보안기술 개발 연구 (2020.09-2022.06)
+  - 특허 3건
 
-### 피즐리소프트
-
-**연구원** 2020.01 – 2020.03
-
-- 금융 보안 도구 분석 및 PoC 테스트
 
 ---
 
-### 포스코ICT
+### 피즐리소프트 (3개월)
 
-**외부 모의해킹 전문가** 2019.04 – 2019.12
+**연구원** 2020.01 – 2020.03 (3개월)
+
+- 네트워크 보안 도구 분석 및 PoC 테스트
+
+---
+
+### 포스코ICT (9개월)
+
+**외부 모의해킹 전문가** 2019.04 – 2019.12 (9개월)
 
 - 보안 점검 및 취약점 리포팅
 
----
+<br>
 
 ## 🧪 개인 및 외부 프로젝트
+
+- 자연어 기반 퍼징 시드 생성 연구 (2021.03 - 2022.02)
+  - 논문 1건
+
+- 테스트 프레임워크를 활용한 라이브러리 퍼징 환경 구축 자동화 (2020.11 - 2021.07)
+  - 논문 2건, 취약점 1건 제보
+
+
+
 
 - **관리용 Android 앱 개발**
     - (2025.02~)
 
+
+
+
 - **알고리즘 학습 커뮤니티 봇 개발 및 운영**
-    - Discord 기반 커스텀 봇, 자동 출석/진행 관리
+    - Discord 기반 커스텀 봇
     - 기간: 2021.01 – 2023.05 (2년 5개월)
 
 - **AI 기반 네트워크 위협 탐지**
     - K-Cyber Security Challenge 2019 참가 (2개월)
 
-- **알고리즘 학습 스터디 운영 및 문제풀이 자동화**
+- **알고리즘 학습 스터디 운영 및 문제풀이**
     - 2019.03 – 2022.05 (3년 3개월)
 
 - **BoB 7기 연구 과제 – 퍼징 자동화 및 보안 기술 기초 연구**
     - 2018.07 – 2019.03
+    - 논문 2건
 
----
+<br>
 
 ## 🏆 수상 이력
 
-- **KOSPO 웹서비스 정보보안 대회** – 우수상 (2021, 4위)
 - **ICPC SEOUL 2019** – Honorable Mention
-- **육군 사이버보안 경진대회** – 정보화기획참모부장상 (3위)
 - **세종대학교 창업 아이디어 페스티벌** – 대상
-- **세종대 SW 공모전** – 4위
+- **2017년 제 4회 교내 SW 경시대회(세종코딩첼린지위크)** – 4등
 
----
+<br>
 
 ## 🎓 교육
 
 - **고려대학교 정보보호대학원**, 정보보호학 석사 (2020.09 – 2022.08)
-- **세종대학교**, 컴퓨터정보보호학 학사 (2016.03 – 2020.08)
+- **세종대학교**, 정보보호학심화 학사 (2016.03 – 2020.08)
 - **BoB 7기**, 디지털 포렌식 트랙 수료 (2018.07 – 2019.03)
 
----
-
-## 📄 논문 (선택)
-
-- CODASPY 2023: *Infotainment System Hacking*
-[DOI](https://doi.org/10.1145/3577923.3583650)
-- IEEE Access: *Fuzzing Executables Generation*
-- JKIISC: *NLP 기반 퍼징 시드 생성 기법* 외 4편
-
----
-
-## 🧠 특허
-
-- KR 등록: 무인이동체 이벤트 기록 방법 (10-2021-0165397)
-- 국내/미국 출원: GAN 기반 메시지 ID 시퀀스 생성 및 이상 탐지 모델
-
----
-
-## 🛡️ CVE 제보
-
-- CVE-2022-34096
-- CVE-2022-24597
-- CVE-2022-24596
-- CVE-2022-24595
-
----
+<br>
 
 *최종 수정: 2025.07*
